<resources>
    <string name="app_name">HomeDoctor</string>
    <string name="id">ID</string>
    <string name="pwd">Password</string>


    <string name="kakao_rest_api_key">f9e30d24ca1d9a3fbfe8acdbe512bebc</string>
    <string name="kakao_admin_key">663e19f711f4c0f42636026640dd0581</string>
    <string name="kakao_pay_cid">TC0ONETIME</string>
    <string name="kakao_pay_partner_order_id">partner_order_id</string>
    <string name="kakao_pay_partner_user_id">partner_user_id</string>
    <string name="kakao_pay_base_url">https://kapi.kakao.com/v1/payment/</string>
    <string name="kakao_pay_approval_url">success</string>
    <string name="kakao_pay_ready_url">ready</string>
    <string name="kakao_pay_cancel_url">cancel</string>
    <string name="kakao_pay_order_url">order</string>
    <string name="kakao_pay_fail_url">fail</string>



    <string name="save_id_kr">ID 저장</string>
    <string name="email_kr">이메일</string>
    <string name="keep_login_kr">자동 로그인</string>
    <string name="deliver_state_kr">배송 상태</string>
    <string name="basket_kr">장바구니</string>
    <string name="my_page_kr">마이 페이지</string>
    <string name="pay_info_kr">결제 정보</string>
    <string name="pay_result_kr">결제 결과</string>


    <string name="sign_up_kr">회원가입</string>
    <string name="login_kr">로그인</string>
    <string name="phone_kr">전화번호</string>
    <string name="name_kr">이름</string>
    <string name="pwd_kr">비밀번호</string>
    <string name="post_num_kr">우편번호</string>
    <string name="address_kr">주소</string>
    <string name="detail_address_kr">상세주소</string>
    <string name="search_kr">검색</string>
    <string name="product_name_kr">상품명</string>
    <string name="shopping_cart_kr">장바구니</string>
    <string name="purchase_kr">구매하기</string>
    <string name="delete_kr">삭제</string>
    <string name="select_all_kr">전체선택</string>
    <string name="total_price_kr">총 금액</string>
    <string name="cancel_kr">취소</string>
    <string name="save_kr">저장</string>
    <string name="item_list_kr">상품 리스트</string>
    <string name="pay_kr">결재</string>
    <string name="pay_success_kr">결제 완료</string>
    <string name="goto_main_kr">메인으로</string>
    <string name="logout_kr">로그아웃</string>
    <string name="reservation">예약확인</string>
</resources>
