<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/product_name_kr"
                android:textSize="15pt"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:textSize="10pt"
                android:textColor="#000000"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="상세설명"
                android:textSize="8pt"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/descText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                />

            <ImageView
                android:id="@+id/detailDescimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        <Button
            android:id="@+id/detailCartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart_kr"
            android:background="#CCCCCC"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/detailPurchaseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_kr"
            android:background="#2196FF"
            android:layout_weight="1"
            />

    </LinearLayout>
</ScrollView>