<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_size_l"
            android:paddingEnd="@dimen/txt_size_l"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/email_kr"
                android:textColor="@color/d_gray"
                android:textSize="@dimen/txt_size_m"/>

            <EditText
                android:id="@+id/edit_mail"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textSize="@dimen/txt_size_m"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_size_l"
            android:paddingEnd="@dimen/txt_size_l"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/pwd_kr"
                android:textColor="@color/d_gray"
                android:textSize="@dimen/txt_size_m"/>

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textSize="@dimen/txt_size_m"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_size_l"
            android:paddingEnd="@dimen/txt_size_l"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/name_kr"
                android:textColor="@color/d_gray"
                android:textSize="@dimen/txt_size_m"/>

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textSize="@dimen/txt_size_m"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_size_l"
            android:paddingEnd="@dimen/txt_size_l"
            android:weightSum="10">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/phone_kr"
                android:textColor="@color/d_gray"
                android:textSize="@dimen/txt_size_m"/>

            <LinearLayout
                android:id="@+id/layout_phone"
                android:layout_weight="7"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:weightSum="3">
                <EditText
                    android:id="@+id/edit_phone_1"
                    android:layout_weight="1"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/edit_phone_2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="4"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/txt_size_m"/>
                <EditText
                    android:id="@+id/edit_phone_3"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="4"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/txt_size_m"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_size_l"
            android:paddingEnd="@dimen/txt_size_l"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:text="@string/post_num_kr"
                android:textColor="@color/d_gray"
                android:textSize="@dimen/txt_size_m"/>

            <LinearLayout
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end|center_vertical"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edit_post_num"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/txt_size_m"/>

                <Button
                    android:id="@+id/btn_search_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_kr"
                    android:visibility="gone"
                    android:background="@color/d_gray"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_size_l"
            android:paddingEnd="@dimen/txt_size_l"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/address_kr"
                android:textColor="@color/d_gray"
                android:textSize="@dimen/txt_size_m"/>

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textSize="@dimen/txt_size_m"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_size_l"
            android:paddingEnd="@dimen/txt_size_l"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/detail_address_kr"
                android:textColor="@color/d_gray"
                android:textSize="@dimen/txt_size_m"/>

            <EditText
                android:id="@+id/edit_detail_address"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textSize="@dimen/txt_size_m"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size_l"
        android:text="@string/sign_up_kr"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>
    <WebView
        android:id="@+id/webview_post"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"/>

</FrameLayout>