<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="15dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_xl"
                android:text="@string/pay_success_kr"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginRight="8dp"/>

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_name"
                android:layout_marginTop="1dp"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/item_name"
                android:textSize="15sp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/txt_size_l"
                android:paddingEnd="@dimen/txt_size_l"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/name_kr"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/txt_size_m"/>

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_size_m"
                    android:hint="name"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/txt_size_l"
                android:paddingEnd="@dimen/txt_size_l"
                android:weightSum="10">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/phone_kr"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/txt_size_m"/>

                <LinearLayout
                    android:id="@+id/layout_phone"
                    android:layout_weight="7"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/txt_size_m"
                        android:layout_height="wrap_content"
                        android:hint="010"/>

                </LinearLayout>

            </LinearLayout>




            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/txt_size_l"
                android:paddingEnd="@dimen/txt_size_l"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:text="@string/post_num_kr"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/txt_size_m"/>

                <LinearLayout
                    android:layout_weight="7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_post_num"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_size_m"
                        android:hint="26493"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/txt_size_l"
                android:paddingEnd="@dimen/txt_size_l"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/address_kr"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/txt_size_m"/>

                <TextView
                    android:id="@+id/text_address"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_size_m"
                    android:hint="강원도 원주시 연세대길 1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/txt_size_l"
                android:paddingEnd="@dimen/txt_size_l"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/detail_address_kr"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/txt_size_m"/>

                <TextView
                    android:id="@+id/text_detail_address"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_size_m"
                    android:hint="연세대학교"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/goto_main_kr"/>

</FrameLayout>